fixed all buttons, Tried to fix the destinations div to be behind of blurred boxes, and adding texts, but it wasn't possible

--- a/css/buggl.css
+++ b/css/buggl.css
@@ -4,13 +4,13 @@
     font-family: 'Yantramanav', sans-serif;//
     height: 28rem;
     padding: 7rem 0 7rem 0;
-    z-index: 1000;
+    /* z-index: 1000 !important; */
 }
 .blurred-box h2{
     position:relative;
     font-size: 3rem;
     font-weight: 500;
-    
+
 }
 
 .blurred-box h3{
@@ -44,16 +44,12 @@ nav img{
 .transparente{
     background-color: rgba(0,0,0,0);
 }
-#boton-nav{
+#btn-nav{
     background-color: rgba(0,0,0,0.15);
-    /*margin-right: 10px;*/
     border:solid 1px rgba(255,255,255,0.8);
     box-shadow: none;
     border-radius: 5px;
-    /*height: 40px;*/
-    /*line-height: 40px;*/
 }
-
 #steps-banner{
     padding-top: 25%;
 }
@@ -69,9 +65,10 @@ nav img{
 #destinations img{
     padding: 0;
 }
+
 #first-row{
     margin-bottom: 0 !important;
-    /* z-index: 0; */
+     z-index: 0; 
 }
 .image h3{
     text-shadow: 3px 2px 9px rgba(0, 0, 0, 0.7);
@@ -83,8 +80,8 @@ nav img{
 }
 
 .image { 
-   position: relative; 
-   width: 100%; 
+    position: relative; 
+    width: 100%; 
 }
 form{
     margin-top: 7rem;
@@ -92,7 +89,9 @@ form{
 form button{
     margin-top:2.5rem;
 }
-
+.input-field label,#btn-send{
+    font-size: 1.5rem;
+}
 #social-icons{
     margin-top: -5rem;
     font-size: 2.5rem;
@@ -109,10 +108,10 @@ form button{
 #info-2{
     z-index: 1000;
 }
-#destinations{
-    z-index: 0;
-}
-
 #barra{
     box-shadow: none;
+}
+
+#btn-send{
+    border-radius: 5px;
 }
